php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #30356 str_ireplace does not work on all strings.
Submitted: 2004-10-07 23:26 UTC Modified: 2004-10-08 01:11 UTC
From: mark dot meredith at shaw dot ca Assigned:
Status: Closed Package: Strings related
PHP Version: 5.0.2 OS: Mac OS 10.3.5
Private report: No CVE-ID: None
 [2004-10-07 23:26 UTC] mark dot meredith at shaw dot ca
Description:
------------
The "A" should be replaced with "b" in this example. 
Instead the letter A remains.

Reproduce code:
---------------
<?php

print(str_ireplace("a", "b", "A"));

?>

Expected result:
----------------
The "A" replaced with "b".

Actual result:
--------------
the letter A remains.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-10-08 01:11 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 11:00:01 2026 UTC