Fixed bug #30356 (str_ireplace() does not work on all strings).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@170042 c90b9560-bf6c-de11-be94-00142212c4b1